# cpp-filesystem

./: LICENSE  README  README.md  filesystem_filter.hpp  main.cpp
lib/: AUTHORS  Makefile.am  TODO  configure.ac
test/: ChangeLog  Makefile.am  NEWS  configure.ac
